<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.trackfootball.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/teamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/team_a"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/goal_team_a"
                    style="@style/TextViewStyle"
                    android:text="@string/goalsa"
                    android:textSize="38sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/goalButtonA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="goalTeamA"
                        android:text="@string/goal" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <Button
                        android:id="@+id/offisdeButtonA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="offsideTeamA"
                        android:text="@string/offside" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/foulButtonA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="foulTeamA"
                        android:text="@string/foul" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:enabled="false"
                            android:text="@string/offside"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/foul_team_a"
                            style="@style/TextViewStyle"
                            android:layout_centerInParent="true"
                            android:text="@string/foulsa" />

                    </RelativeLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/yellowButtonA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFEB3B"
                        android:onClick="yellowTeamA" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:enabled="false"
                            android:text="@string/offside"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/yellow_team_a"
                            style="@style/TextViewStyle"
                            android:layout_centerInParent="true"
                            android:text="@string/yellowa" />

                    </RelativeLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/redButtonA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#e53935"
                        android:onClick="redTeamA" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:enabled="false"
                            android:text="@string/offside"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/red_team_a"
                            style="@style/TextViewStyle"
                            android:layout_centerInParent="true"
                            android:text="@string/reda" />

                    </RelativeLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/teamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/team_b"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/goal_team_b"
                    style="@style/TextViewStyle"
                    android:text="@string/goalsb"
                    android:textSize="38sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/offisdeButtonB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="offsideTeamB"
                        android:text="@string/offside" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <Button
                        android:id="@+id/goalButtonB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="goalTeamB"
                        android:text="@string/goal" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:enabled="false"
                            android:text="@string/offside"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/foul_team_b"
                            style="@style/TextViewStyle"
                            android:layout_centerInParent="true"
                            android:text="@string/foulsb" />

                    </RelativeLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <Button
                        android:id="@+id/foulButtonB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="foulTeamB"
                        android:text="@string/foul" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:enabled="false"
                            android:text="@string/offside"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/yellow_team_b"
                            style="@style/TextViewStyle"
                            android:layout_centerInParent="true"
                            android:text="@string/yellowb" />

                    </RelativeLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <Button
                        android:id="@+id/yellowButtonB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFEB3B"
                        android:onClick="yellowTeamB" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:enabled="false"
                            android:text="@string/offside"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/red_team_b"
                            style="@style/TextViewStyle"
                            android:layout_centerInParent="true"
                            android:text="@string/redb" />

                    </RelativeLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <Button
                        android:id="@+id/redButtonB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#F44336"
                        android:onClick="redTeamB" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/countDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_match" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/start_match"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/countDownText"
                    style="@style/TextViewStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/_0"
                    android:textColor="@color/colorAccent"
                    android:textSize="38sp" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="Reset"
            android:text="@string/reset_match" />

    </LinearLayout>

</ScrollView>
